test/scc_test/stmt/semantic-errors/048.a
048.t:4:12: error: expression must have arithmetic type